--- a/Health_Insurance_Company/src/app/DefaultHome/Footer.html
+++ b/Health_Insurance_Company/src/app/DefaultHome/Footer.html
@@ -55,9 +55,12 @@
 
   <div class="footer-right">
 
-    <p class="footer-company-about">
-      <span>About the company</span> Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit,
-      eu auctor lacus vehicula sit amet.
+    <p class="footer-company-about" style = "height: 220px; width: 350px;">
+      <span>About the company</span> 
+      First Health Insurance company is providing the health insurance on time with low cost 
+      of insurance premium paid by the customers , as well storing the health record of the
+      family members which is accessible to the doctors from the recognised multiple specialty 
+      hospitals which are tie up with Family health insurance company.
     </p>
 
     <div class="footer-icons">
