--- a/Health_Insurance_Company/src/app/Customer/Customer_Header.css
+++ b/Health_Insurance_Company/src/app/Customer/Customer_Header.css
@@ -13,11 +13,12 @@
 }
 
 .dropdown {
-	padding-left : 700px;	
+    padding-left : 3px;
+    margin-left  : 685px;
 }
 
 #dropdown {
-	padding-left : 35px;
+	padding-left : 7px;
 }
 .dropdown a ,#dropdown a {
 	color : rgba(8, 9, 119, 0.76);	
@@ -29,6 +30,6 @@
     color: #070E74;
 }
 
-.dropdown-menu{
+/* .dropdown-menu{
 	padding-left : 700px;	
-}
+} */
