--- a/Health_Insurance_Company/src/app/Customer/Customer_Header.html
+++ b/Health_Insurance_Company/src/app/Customer/Customer_Header.html
@@ -4,14 +4,15 @@
     <nav class="navbar navbar-inverse" style="margin : -60px 150px;">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-         <li class="dropdown"><a [routerLink]="['/home/'+ id +'/appointment']" >Appointment status</a></li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> My-Account <span class="caret"></span></a>
+         <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Appointment <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a [routerLink]="['/fruit']"> Add Review </a></li>
-              <li><a [routerLink]="['/assignment1']">Profile settings</a></li>
-              <li><a [routerLink]="['/assignment2']">Cancel/Update Insurance Plan</a></li>
-             
+              <li>
+                  <a [routerLink]="['/home/'+ id +'/appointment']" > Book Appointment  </a>
+              </li>
+              <li>
+                 <a [routerLink]="['/home/'+ id +'/delete-appointment']"> Cancel Appointment </a>
+              </li>              
             </ul>
           </li>
           
