--- a/Health_Insurance_Company/src/app/DefaultHome/Footer.css
+++ b/Health_Insurance_Company/src/app/DefaultHome/Footer.css
@@ -11,7 +11,7 @@
 	width: 100%;
 	text-align: left;
 	font: bold 16px sans-serif;
-
+    height : 290px;
 	padding: 55px 50px;
 	margin-top: 60px;
 }
@@ -132,7 +132,7 @@
 }
 
 .footer-distributed .footer-icons{
-	margin-top: 25px;
+	margin-top: -30px;
 }
 
 .footer-distributed .footer-icons a{
@@ -150,6 +150,7 @@
 
 	margin-right: 3px;
 	margin-bottom: 5px;
+	
 }
 
 /* If you don't want the footer to be responsive, remove these media queries */
