--- a/Health_Insurance_Company/src/app/PageNotFound/PageNotFound.html
+++ b/Health_Insurance_Company/src/app/PageNotFound/PageNotFound.html
@@ -12,7 +12,7 @@
                 <div class="text">
                     <h1>PAGE NOT FOUND</h1>	
                     
-                    <p>You have been tricked into click on a link that can not be found. Please check the url or go to <a [routerLink]="['/']">main page</a> and see if you can locate what you are looking for</p>
+                    <p>You have been tricked into click on a link that can not be found. Please check the url or go to <a [ngStyle] = "pointer()" (click) = "redirect()">main page</a> and see if you can locate what you are looking for</p>
                 </div>
                 <div class="image">
                     <img src="app/PageNotFound/PG_images/smile.png">
@@ -22,7 +22,7 @@
                 
                 <div class="wthree">
                     <div class="back">
-                        <a [routerLink]="['/']">Back to home</a>
+                        <a [ngStyle] = "pointer()" (click) = "redirect()">Back to home</a>
                     </div>
                     <div class="social-icons w3agile">
                         <ul>
