--- a/Health_Insurance_Company/src/app/Customer/Customer_MakeAppointment_Modal.html
+++ b/Health_Insurance_Company/src/app/Customer/Customer_MakeAppointment_Modal.html
@@ -13,29 +13,26 @@
 
       <label>Choose Date and Time :
          <!-- <datetime   [(ngModel)]="date"  [timepicker]="timepickerOpts"
-                     [datepicker]= "datepickerOpts" [hasClearButton]="true"></datetime>  for both date and time -->
-              
-              <datetime   [(ngModel)]="date" [timepicker]="false" [datepicker]= "datepickerOpts" [hasClearButton]="true"></datetime>
-         
-         
-       </label>
-
-      <h5><strong><i>Selected Time slot: </i></strong> {{getDate(date) | date: "medium"}}</h5>
-
-      <button (click) = "getAvailDates(date)"> Check Availability</button>
-     
-      <div [hidden] = "!(availableTimes && availableTimes.length)">
-          
-                <span *ngFor = "let time of availableTimes">
-                    <button class="btn btn-primary btn-lg"  style = "margin-right : 10px;"> {{time | date : 'mediumTime'}} </button>
-                </span>     
-                 
-      </div>
+                          [datepicker]= "datepickerOpts" [hasClearButton]="true">
+              </datetime>  for both date and time -->              
+        <datetime   [(ngModel)]="date" [timepicker]="false" [datepicker]= "datepickerOpts" [hasClearButton]="false"></datetime>        
+       </label>     
       <br><br>
-
+      <button (click) = "getAvailDates(date)"> Check Availability</button>
+      <div [hidden] = "!(availableTimes && availableTimes.length)"> 
+          <br><br>         
+                <span *ngFor = "let time of availableTimes">
+                    <button class="btn btn-primary btn-lg"  style = "margin-right : 10px;" (click) = "getDate(time)"> {{time | date : 'shortTime'}} </button>
+                </span>     
+          <br><br>        
+      </div>
+      
+      <h5 [hidden] = "!(availableTimes && availableTimes.length)"><strong><i>Selected Time slot: </i></strong> {{bookedDate | date: "medium"}}</h5>
+      <br>
       <label> Medical reason : </label>
       <br>
       <textarea rows="7" cols="70" [(ngModel)]="consultingReason">Enter consulting reason here...</textarea>
+      <br>
 
       <button type="submit" class="btn btn-primary btn-lg" (click) = "bookAppoint()">
               Submit &nbsp;<span class="glyphicon glyphicon-search"></span></button>
