--- a/Health_Insurance_Company/src/app/Customer/Customer_Header.html
+++ b/Health_Insurance_Company/src/app/Customer/Customer_Header.html
@@ -4,7 +4,8 @@
     <nav class="navbar navbar-inverse" style="margin : -60px 150px;">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-         <li class="dropdown">
+         <li class="dropdown" ><a [routerLink]="['/home' , id]"> Home </a></li>
+         <li id="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Appointment <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li>
