--- a/Health_Insurance_Company/src/app/Login/Customer.SignUp.html
+++ b/Health_Insurance_Company/src/app/Login/Customer.SignUp.html
@@ -145,7 +145,7 @@
 
                     <div class="col-md-offset-3 col-md-9">
 
-                        <button id="btn-signup" type="submit" class="btn btn-info" [disabled]="!entryForm.valid" ><i class="icon-hand-right"></i> &nbsp; Sign Up</button>
+                        <button  type="submit" class="btn btn-info" [disabled]="!entryForm.valid" ><i class="icon-hand-right"></i> &nbsp; Sign Up</button>
 
                         <span style="margin-left:8px;">or</span>
 
