--- a/Health_Insurance_Company/src/app/Customer/Add_Review.html
+++ b/Health_Insurance_Company/src/app/Customer/Add_Review.html
@@ -35,13 +35,13 @@
                   </table>
         <br>
         
-                <label> On Which day did you consult {{ doctorName}} 
+                <!-- <label> On Which day did you consult {{ doctorName}} 
                         <br>
                                  <datetime   [(ngModel)]="date"  [timepicker]="timepickerOpts"
                                              [datepicker]= "datepickerOpts" [hasClearButton]="true">
                                  </datetime>
                 </label>
-                        <h5><strong><i>Doctor Consultation Date: </i></strong> {{getDate(date) | date: "medium"}}</h5>
+                        <h5><strong><i>Doctor Consultation Date: </i></strong> {{getDate(date) | date: "medium"}}</h5> -->
         
         
         <br>
