--- a/Health_Insurance_Company/src/app/Customer/Customer_Header.html
+++ b/Health_Insurance_Company/src/app/Customer/Customer_Header.html
@@ -12,7 +12,7 @@
                   <a [routerLink]="['/home/'+ id +'/appointment']" > Book Appointment  </a>
               </li>
               <li>
-                 <a [routerLink]="['/home/'+ id +'/delete-appointment']"> Cancel Appointment </a>
+                 <a [routerLink]="['/home/'+ id +'/delete-appointment']"> All Appointments </a>
               </li>              
             </ul>
           </li>
