--- a/Health_Insurance_Company/src/app/Doctor/Doctor_Header.html
+++ b/Health_Insurance_Company/src/app/Doctor/Doctor_Header.html
@@ -63,6 +63,15 @@
                 <a href="#" data-toggle="modal" data-target="#doctorProfile" (click)="DoctorProfileClicked($event)"> Profile </a>
               </li>
               <li>
+                <a href="#" data-toggle="modal" data-target="#updatePassword" (click)="updatePasswordClicked()"> Update Password </a>
+              </li>
+              <li>
+                <a [routerLink]="['/doctorHome/'+ id +'/availability']"> Add Availability </a>
+              </li>
+              <li>
+                <a [routerLink]="['/doctorHome/'+ id +'/showAvailability']"> View/Delete Availability </a>
+              </li>
+              <li>
                 <a [ngStyle]="pointer()" (click)="logOut()"> Log Out </a>
               </li>
 
@@ -245,6 +254,82 @@
 
 
 
+
+
+
+<!-- Modal View for Update Password -->
+<div id="updatePassword" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+
+      <div class="modal-header" style="background-color: #f7f7f7; padding-bottom: 0px;">
+        <h2 class="modal-title"> Update Password </h2>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row-fluid" [hidden]="!hasMessage">
+          <ng-container *ngIf="passwordSuccessMsg; else passwordErrorMsg">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 alert alert-success">
+              <button type="button" class="close" (click)="clearError()" data-dismiss="modal">
+                &times;
+              </button>
+              <span>
+                {{passwordSuccessMsg}}
+              </span>
+            </div>
+          </ng-container>
+          <ng-template #errorMessage>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 alert alert-danger">
+              <button type="button" class="close" (click)="clearError()">
+                &times;
+              </button>
+              <span>
+                {{passwordErrorMsg}}
+              </span>
+            </div>
+          </ng-template>
+        </div>
+      </div>
+
+      <div class="modal-body">
+
+        <form (ngSubmit)="updatePassword()" #passwordChange="ngForm">
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" [(ngModel)]="doctor.password" name="password" pattern="(?=^.{6,}$)((?=.*\d)(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
+              placeholder="Password" required>
+            <small id="passwordHelp" class="form-text">Password should be atleast 6 characters. Must have atleast one uppercase, lowercase, special character and number.</small>
+          </div>
+          <div class="form-group">
+            <label for="password">Confirm Password</label>
+            <input type="password" class="form-control" id="confirmPassword" [(ngModel)]="doctor.confirmPassword" name="confirmPassword"
+              placeholder="Confirm Password" pattern="(?=^.{6,}$)((?=.*\d)(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required>
+            <div [hidden]="passwordMatch">
+              <small id="passwordHelp" class="form-text">Password do not match.</small>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-success" [disabled]="!passwordChange.form.valid">Submit</button>
+          <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        </form>
+
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
 <!-- Modal View for doctor profile -->
 <div id="doctorProfile" class="modal fade" role="dialog">
   <div class="modal-dialog">
@@ -300,9 +385,7 @@
 
             <div class="form-group">
               <label for="education">Education</label>
-              <!-- pattern="^[a-zA-Z.]+(,\s[a-zA-Z.]+)*$" -->
-              <input type="text" class="form-control" id="education" [(ngModel)]="doctorProfile.education" name="education" 
-                pattern="^((?!\d)(?![!@#$*%^])[a-zA-z,)/.(-\s])+$"
+              <input type="text" class="form-control" id="education" [(ngModel)]="doctorProfile.education" name="education" pattern="^[a-zA-Z.]+(,\s[a-zA-Z.]+)*$"
                 required>
             </div>
 
