--- a/Health_Insurance_Company/src/app/Doctor/Doctor_Header.html
+++ b/Health_Insurance_Company/src/app/Doctor/Doctor_Header.html
@@ -385,7 +385,8 @@
 
             <div class="form-group">
               <label for="education">Education</label>
-              <input type="text" class="form-control" id="education" [(ngModel)]="doctorProfile.education" name="education" pattern="^[a-zA-Z.]+(,\s[a-zA-Z.]+)*$"
+              <!-- pattern="^[a-zA-Z.]+(,\s[a-zA-Z.]+)*$" -->
+              <input type="text" class="form-control" id="education" [(ngModel)]="doctorProfile.education" name="education" pattern="^((?!=\d)(?!=[!@^#$%&*])[a-zA-Z,.\s-)(/])+$"
                 required>
             </div>
 
@@ -415,8 +416,9 @@
 
             <div class="form-group">
               <label for="affiliatedInsurance">In-Network Insurances</label>
+              <!-- pattern="([a-zA-Z]+(\s[a-zA-Z])).*" -->
               <input type="text" class="form-control" id="affiliatedInsurance" [(ngModel)]="doctorProfile.affiliatedInsurance" name="affiliatedInsurance"
-                pattern="([a-zA-Z]+(\s[a-zA-Z])).*" required>
+                 pattern="^((?!=\d)(?!=[!@^#$%&*])[a-zA-Z,.\s-)(/])+$" required>
             </div>
 
             <div class="form-group">
