--- a/Health_Insurance_Company/src/app/Doctor/Doctor_Availability.html
+++ b/Health_Insurance_Company/src/app/Doctor/Doctor_Availability.html
@@ -1,4 +1,4 @@
-<Doctor-Header></Doctor-Header>
+<Doctor-Header [temp] = "true"></Doctor-Header>
 
 <div class="container-fluid" style="padding-top: 1%">
 
