--- a/Health_Insurance_Company/src/app/Customer/doctor_nearBy.html
+++ b/Health_Insurance_Company/src/app/Customer/doctor_nearBy.html
@@ -28,16 +28,16 @@
       <tr>
         <th></th>
         <th></th>
+        <th></th>
       </tr>
 
       <tr>
         <td style ="padding-left : 50px;">
           <i class="fa fa-user-md" style="font-size:150px;color:#B1B1A5" title="Doctor Image coming soon"></i>
         </td>
-        <td style="padding : 20px 0 0 60px;">
-            <a [ngStyle] = "pointer()" (click) = "setSelectedDoctorMemberId(docList.memberId , docList.doctorName , 'DocProfile')">
-                   <h2 style=" font-family: 'Trebuchet MS', Helvetica, sans-serif ;"> {{docList.doctorName | uppercase}} </h2>
-            </a>
+        <td style="padding : 10px 0 0 60px;">
+            
+            <h2 style=" font-family: 'Trebuchet MS', Helvetica, sans-serif ;"> {{docList.doctorName | uppercase}} </h2>            
           <!-- rating readonly -->
           <rating [(ngModel)]="docList.rating"  [readonly]="true" [max]="5"  style="font-size:22px;" > </rating>
           <p style="font-family : 'Trebuchet MS', Helvetica, sans-serif ;" title="Hospital Address">
@@ -46,12 +46,15 @@
           <p style="font-style: italic " title="Availability">
             <i class="fa fa-calendar-check-o" style = "color:#93f300"></i> Next Availability : {{docList.availbleDate | date : fullDate }}
           </p>
+          <h3 style=" font-family: 'Trebuchet MS', Helvetica, sans-serif ;">  {{docList.network}}</h3>
         </td>
         <td style="padding : 0 0 0 100px;">
-            
             <p>
+                <button type="button"  class="btn btn-warning"  (click) = "setSelectedDoctorMemberId(docList.memberId , docList.doctorName , 'DocProfile')"> Make Appointment </button>
+            </p>            
+            <!-- <p>
                 <button type="button"  class="btn btn-success"  (click) = "setSelectedDoctorMemberId(docList.memberId , docList.doctorName , 'Appointment')"> Make Appointment</button>
-            </p>
+            </p> -->
             <p>
                 <button type="button" class="btn btn-info" (click) = "setSelectedDoctorMemberId(docList.memberId , docList.doctorName , 'Review')"  > Add Review </button>
             </p>
